function modified for correct output

--- a/jscoursetesting/calculateArea/calculate_area.html
+++ b/jscoursetesting/calculateArea/calculate_area.html
@@ -12,7 +12,7 @@
 
             <button onclick="calculateArea()">Calculate Area</button><br><br>
             <p id="result"></p>
-            <script src="./calculate-area.js"></script>
+            <script src="./calculate_area.js"></script>
 
         </body>
     </html>
